--- a/package.json
+++ b/package.json
@@ -1,27 +1,30 @@
 {
-    "name": "burger",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node server.js"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/McGee1993/burger.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-      "url": "https://github.com/McGee1993/burger/issues"
-    },
-    "homepage": "https://github.com/McGee1993/burger#readme",
-    "dependencies": {
-      "express": "^4.17.1",
-      "express-handlebars": "^3.1.0",
-      "method-override": "^3.0.0",
-      "mysql": "^2.17.1"
-    }
-  }
+  "name": "node.js",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "install": "^0.13.0",
+    "method-override": "^3.0.0",
+    "mysql": "^2.17.1",
+    "npm": "^6.12.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/McGee1993/burger.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/McGee1993/burger/issues"
+  },
+  "homepage": "https://github.com/McGee1993/burger#readme"
+}
